--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <!-- After Question -->
     <div class="container4" id="cont4">
         <h1>SELAMAT HARI VALENTINE</h1>
-        <h2>AAA... CONGRATS SAYANG SUDAH MENJAWAB SEMUA BENAR ♡</h2>
+        <h2>AAA... KEREN BANGET JAWABANNYA BENER, LOVE YOU ♡</h2>
         <h3>
             BTW AKU SUKA BANGET SAMA FOTO INI...<br>
             COBA KLIK GAMBARNYA DEH...
@@ -48,13 +48,13 @@
     <div class="container5" id="cont5">
         <h1>SELAMAT HARI VALENTINE</h1>
         <h3>
-            FACIA SAYANG, I THANKFULLY TO YOU FOR BEING MY GIRLFRIEND.<br>
+            MY FACIA, I THANKFULLY TO YOU FOR BEING MY GIRLFRIEND.<br>
             I CAN'T IMAGINE HOW MY WORLD WITHOUT YOU. LEBAY YA? WKWKW...<br>
             TAPI BENERAN, AKU SANGAT MENGUCAP SYUKUR BANGET AKU MILIKIN A GIRL LIKE YOU ♡<br>
             <p><i>"Aku mengucap syukur kepada Allahku setiap kali aku mengingat kamu." ~ Filipi 1:3</i></p><br>
             DAN YAP, KAMU ADALAH HADIAH TERBAIK YANG SELAMA INI AKU DAPAT. BTW, NANTIKAN DI TANGGAL 17 YAA...<br>
             SPOILER DIKIT, I'VE GOT SOMETHING FOR YOU... AND I HOPE YOU LIKE IT... <br>
-            MY FACIA, I LOVE YOU SO MUCH, AKU BENER BENER CINTA DAN SAYANG KAMU...
+            I LOVE YOU SO MUCH, I'M TRULLY LOVE AND SAYANG KAMU... ♡♡
         </h3>
         <H4>©COPYRIGHT MARCEL WANG 2024</H4>
         <img id="cat1" src="./assets/cat.jpeg">
